# disk-analysis

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  vcpkg.json
cmake/: FindTSK.cmake
src/: defs.hpp  main.cpp
src/actions/: partitions.cpp  partitions.hpp
src/core/: context.hpp  disk.hpp  filesystem.hpp  fsEntry.cpp  fsEntry.hpp  logger.hpp  volume.hpp
src/ui/cli/: cli.hpp  wrappers.hpp
